# CodeBrix.Audio

./: AGENT-README.txt  CodeBrix.Audio.slnx  README.md  THIRD-PARTY-NOTICES.txt
native/miniaudio/: CMakeLists.txt  README.txt  library.c  library.h
src/CodeBrix.Audio/: CodeBrix.Audio.csproj  InternalsVisibleTo.cs
src/CodeBrix.Audio.Engine/: CodeBrix.Audio.Engine.csproj  InternalsVisibleTo.cs
src/CodeBrix.Audio.Engine/Abstracts/: AudioAnalyzer.cs  AudioEngine.cs  SoundComponent.cs  SoundModifier.cs  SoundPlayerBase.cs
src/CodeBrix.Audio.Engine/Components/: EnvelopeGenerator.cs  LowFrequencyOscillator.cs  Mixer.cs  Oscillator.cs  Recorder.cs  SoundPlayer.cs  SurroundPlayer.cs  VoiceActivityDetector.cs  WsolaTimeStretcher.cs
src/CodeBrix.Audio.Engine/Editing/: AudioSegment.cs  AudioSegmentSettings.cs  Composition.cs  CompositionEditor.cs  CompositionRecorder.cs  CompositionRenderer.cs  ControlPoint.cs  FadeCurveType.cs  LoopSettings.cs  MidiExporter.cs  MidiNote.cs  MidiQuantizer.cs  MidiSegment.cs  MidiSequence.cs  MidiTrack.cs  TempoMarker.cs  Track.cs  TrackSettings.cs
src/CodeBrix.Audio.Engine/Enums/: Capability.cs  DeviceType.cs  FilterType.cs  PlaybackState.cs  SampleFormat.cs
src/CodeBrix.Audio.Engine/Exceptions/: BackendException.cs
src/CodeBrix.Audio.Engine/Interfaces/: ControllableParameterAttribute.cs  ICodecFactory.cs  IMidiBackend.cs  IMidiMappable.cs  ISoundDataProvider.cs  ISoundDecoder.cs  ISoundEncoder.cs  ISoundPlayer.cs  IVisualizationContext.cs  IVisualizer.cs
src/CodeBrix.Audio.Engine/Metadata/: SoundMetadataReader.cs  SoundMetadataWriter.cs
src/CodeBrix.Audio.Engine/Midi/: MidiRecorder.cs
src/CodeBrix.Audio.Engine/Modifiers/: AlgorithmicReverbModifier.cs  BassBoosterModifier.cs  ChorusModifier.cs  CompressorModifier.cs  DelayModifier.cs  Filter.cs  FrequencyBandModifier.cs  HighPassModifier.cs  LowPassModifier.cs  MultiChannelChorusModifier.cs  ParametricEqualizer.cs  ResamplerModifier.cs  TrebleBoosterModifier.cs  VocalExtractorModifier.cs
src/CodeBrix.Audio.Engine/Providers/: AssetDataProvider.cs  ChunkedDataProvider.cs  MicrophoneDataProvider.cs  MidiDataProvider.cs  NetworkDataProvider.cs  QueueDataProvider.cs  RawDataProvider.cs  StreamDataProvider.cs
src/CodeBrix.Audio.Engine/Security/: AudioEncryptor.cs  AudioIdentifier.cs  AudioWatermarker.cs  FileAuthenticator.cs  WatermarkTuner.cs
src/CodeBrix.Audio.Engine/Structs/: AudioFormat.cs  DevicesInfo.cs  Errors.cs  NativeDataFormat.cs  Result.cs
src/CodeBrix.Audio.Engine/Synthesis/: Sequencer.cs  Synthesizer.cs
src/CodeBrix.Audio/Dsp/: Complex.cs  (+6 more)
tests/CodeBrix.Audio.Engine.Tests/: AudioFormatTests.cs  CodeBrix.Audio.Engine.Tests.csproj  MiniAudioDecoderTests.cs  MiniAudioEngineTests.cs  TestAudio.cs
tests/CodeBrix.Audio.Tests/: AudioFilePlayerTests.cs  AudioFileReaderTests.cs  BiQuadFilterTests.cs  CodeBrix.Audio.Tests.csproj  EnvelopeFollowerTests.cs  FastFourierTransformTests.cs  Id3v2TagTests.cs  MidiFileTests.cs  Mp3FileReaderTests.cs  Mp3FrameTests.cs  SharedAudioOutputCollection.cs  StopwatchExtensions.cs  TestAudio.cs  VoiceActivityDetectorTests.cs  WaveFileReaderTests.cs  WaveFileWriterTests.cs  WaveFormatTests.cs  WaveOutEventTests.cs
(+389 files in other folders)
